chore: add img directive on a photo details to prevent flicker

--- a/src/app/features/photos-library/components/photo-details/photo-details.component.scss
+++ b/src/app/features/photos-library/components/photo-details/photo-details.component.scss
@@ -17,14 +17,11 @@
 .photo-container {
   flex: 1;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  min-height: 600px;
+  position: relative;
   overflow: hidden;
 
   img {
-    max-width: 100%;
-    max-height: 100%;
     object-fit: contain;
     border-radius: 16px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
